--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body, main {
     display: flex;
     align-items: center; /* Centered children horizontally */
     justify-content: space-around;
+    background-color: gainsboro;
 }
 
 
