--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ h1 {
     position: relative;
     width: 100%;
     height: 120%; 
+    z-index: 2;
 }
 
 
@@ -163,12 +164,14 @@ h1 {
     width: 117%;
     height: 103%;
     left: -17%;
+    z-index: 2;
 }
 
 #img2{
     position: relative;
     width: 116.5%;
-    height: 100%
+    height: 100%;
+    z-index: 2;
 }
 
 #img3{
@@ -177,12 +180,14 @@ h1 {
     width: 101%;
     height: 116%;
     left: -1%;
+    z-index: 2;
 }
 
 #image0 {
     position: relative;
     width: 116%;
     height: 115%;
+    z-index: 2;
 }
 
 #image1 {
@@ -190,6 +195,7 @@ h1 {
     width: 116%;
     height: 115%;
     left: -4%;
+    z-index: 2;
 }
 
 #image2{
@@ -197,6 +203,7 @@ h1 {
     width: 116%;
     height: 115%;
     left: -13%;
+    z-index: 2;
 }
 
 #image3{
@@ -204,6 +211,7 @@ h1 {
     width: 116%;
     height: 110%;
     bottom: 2%;
+    z-index: 2;
 }
 
 #image4{
@@ -212,6 +220,7 @@ h1 {
     height: 110%;
     bottom: 2.4%;
     left: -4%;
+    z-index: 2;
 }
 
 
@@ -221,6 +230,7 @@ h1 {
     height: 110%;
     bottom: 2%;
     left: -13%;
+    z-index: 2;
 }
 
 #image6{
@@ -228,6 +238,7 @@ h1 {
     width: 116%;
     height: 110%;
     bottom: 9%;
+    z-index: 2;
 }
 
 #image7{
@@ -236,6 +247,7 @@ h1 {
     height: 109%;
     bottom: 8%;
     left: -3%;
+    z-index: 2;
 }
 
 #image8{
@@ -244,6 +256,7 @@ h1 {
     height: 110%;
     left: -13%;
     bottom: 9%;
+    z-index: 2;
 }
 
 }
@@ -257,7 +270,6 @@ h1 {
     height: 80vh;
     border-radius: 20px;
     gap: 2vh; 
-    aspect-ratio: 1 / 1; 
 }
 
 #piece-container{
@@ -318,6 +330,7 @@ h1 {
     position: relative;
     width: 100%;
     height: 120%; 
+    z-index: 2;
 }
 
 #img1{
@@ -325,12 +338,14 @@ h1 {
     width: 117%;
     height: 103%; 
     left: -17%;
+    z-index: 2;
 }
 
 #img2{
     position: relative;
     width: 116.5%;
-    height: 100%
+    height: 100%;
+    z-index: 2;
 }
 
 #img3{
@@ -339,12 +354,14 @@ h1 {
     width: 101%;
     height: 116%;
     left: -1%;
+    z-index: 2;
 }
 
 #image0 {
     position: relative;
     width: 116%;
     height: 115%;
+    z-index: 2;
 }
 
 #image1 {
@@ -352,6 +369,7 @@ h1 {
     width: 116%;
     height: 115%;
     left: -4%;
+    z-index: 2;
 }
 
 #image2{
@@ -359,6 +377,7 @@ h1 {
     width: 116%;
     height: 115%;
     left: -13%;
+    z-index: 2;
 }
 
 #image3{
@@ -366,6 +385,7 @@ h1 {
     width: 116%;
     height: 110%;
     bottom: 2%;
+    z-index: 2;
 }
 
 #image4{
@@ -374,6 +394,7 @@ h1 {
     height: 110%;
     bottom: 2.4%;
     left: -4%;
+    z-index: 2;
 }
 
 
@@ -383,6 +404,7 @@ h1 {
     height: 110%;
     bottom: 2%;
     left: -13%;
+    z-index: 2;
 }
 
 #image6{
@@ -390,6 +412,7 @@ h1 {
     width: 116%;
     height: 110%;
     bottom: 9%;
+    z-index: 2;
 }
 
 #image7{
@@ -398,6 +421,7 @@ h1 {
     height: 109%;
     bottom: 8%;
     left: -3%;
+    z-index: 2;
 }
 
 #image8{
@@ -406,6 +430,7 @@ h1 {
     height: 110%;
     left: -13%;
     bottom: 9%;
+    z-index: 2;
 }
 
 }
@@ -419,7 +444,6 @@ h1 {
     height: 80vh;
     border-radius: 20px;
     gap: 2vh; /* Considering the gap in total height calculation */
-    aspect-ratio: 1 / 1; /* Maintain ratio */
 }
 
 #piece-container{
@@ -480,6 +504,7 @@ h1 {
     position: relative;
     width: 100%;
     height: 120%; /* Increased height to overlap */
+    z-index: 2;
 }
 
 #img1{
@@ -487,12 +512,14 @@ h1 {
     width: 117%;
     height: 103%; /* Increased height to overlap */
     left: -17%;
+    z-index: 2;
 }
 
 #img2{
     position: relative;
     width: 116.5%;
-    height: 100%
+    height: 100%;
+    z-index: 2;
 }
 
 #img3{
@@ -501,12 +528,14 @@ h1 {
     width: 101%;
     height: 116%;
     left: -1%;
+    z-index: 2;
 }
 
 #image0 {
     position: relative;
     width: 116%;
     height: 115%;
+    z-index: 2;
 }
 
 #image1 {
@@ -514,6 +543,7 @@ h1 {
     width: 116%;
     height: 115%;
     left: -4%;
+    z-index: 2;
 }
 
 #image2{
@@ -521,6 +551,7 @@ h1 {
     width: 116%;
     height: 115%;
     left: -13%;
+    z-index: 2;
 }
 
 #image3{
@@ -528,6 +559,7 @@ h1 {
     width: 116%;
     height: 110%;
     bottom: 2%;
+    z-index: 2;
 }
 
 #image4{
@@ -536,6 +568,7 @@ h1 {
     height: 110%;
     bottom: 2.4%;
     left: -4%;
+    z-index: 2;
 }
 
 
@@ -545,6 +578,7 @@ h1 {
     height: 110%;
     bottom: 2%;
     left: -13%;
+    z-index: 2;
 }
 
 #image6{
@@ -552,6 +586,7 @@ h1 {
     width: 116%;
     height: 110%;
     bottom: 9%;
+    z-index: 2;
 }
 
 #image7{
@@ -560,6 +595,7 @@ h1 {
     height: 108%;
     bottom: 7%;
     left: -3%;
+    z-index: 2;
 }
 
 #image8{
@@ -568,6 +604,7 @@ h1 {
     height: 110%;
     left: -13%;
     bottom: 9%;
+    z-index: 2;
 }
 
 }
@@ -581,7 +618,6 @@ h1 {
     height: 80vh;
     border-radius: 20px;
     gap: 2vh;
-    aspect-ratio: 1 / 1;
 }
 
 #piece-container{
@@ -642,6 +678,7 @@ h1 {
     position: relative;
     width: 100%;
     height: 120%;
+    z-index: 2;
 }
 
 #img1{
@@ -649,12 +686,14 @@ h1 {
     width: 117%;
     height: 103%;
     left: -17%;
+    z-index: 2;
 }
 
 #img2{
     position: relative;
     width: 116.5%;
-    height: 100%
+    height: 100%;
+    z-index: 2;
 }
 
 #img3{
@@ -663,6 +702,7 @@ h1 {
     width: 101%;
     height: 116%;
     left: -1%;
+    z-index: 2;
 }
 
 
@@ -670,6 +710,7 @@ h1 {
     position: relative;
     width: 116%;
     height: 115%;
+    z-index: 2;
 }
 
 #image1 {
@@ -677,6 +718,7 @@ h1 {
     width: 116%;
     height: 115%;
     left: -4%;
+    z-index: 2;
 }
 
 #image2{
@@ -684,6 +726,7 @@ h1 {
     width: 116%;
     height: 115%;
     left: -13%;
+    z-index: 2;
 }
 
 #image3{
@@ -691,6 +734,7 @@ h1 {
     width: 116%;
     height: 110%;
     bottom: 2%;
+    z-index: 2;
 }
 
 #image4{
@@ -699,6 +743,7 @@ h1 {
     height: 110%;
     bottom: 2.4%;
     left: -4%;
+    z-index: 2;
 }
 
 
@@ -708,6 +753,7 @@ h1 {
     height: 110%;
     bottom: 2%;
     left: -13%;
+    z-index: 2;
 }
 
 #image6{
@@ -715,6 +761,7 @@ h1 {
     width: 116%;
     height: 110%;
     bottom: 9%;
+    z-index: 2;
 }
 
 #image7{
@@ -723,6 +770,7 @@ h1 {
     height: 108%;
     bottom: 7%;
     left: -1%;
+    z-index: 2;
 }
 
 #image8{
@@ -731,6 +779,7 @@ h1 {
     height: 110%;
     left: -13%;
     bottom: 9%;
+    z-index: 2;
 }
 
 }
@@ -744,7 +793,7 @@ h1 {
     height: 80vh;
     border-radius: 20px;
     gap: 2vh; 
-    aspect-ratio: 1 / 1; 
+
 }
 
 #piece-container{
@@ -805,6 +854,7 @@ h1 {
     position: relative;
     width: 100%;
     height: 120%;
+    z-index: 2;
 }
 
 #img1{
@@ -812,12 +862,14 @@ h1 {
     width: 117%;
     height: 103%;
     left: -17%;
+    z-index: 2;
 }
 
 #img2{
     position: relative;
     width: 116.5%;
-    height: 100%
+    height: 100%;
+    z-index: 2;
 }
 
 #img3{
@@ -826,12 +878,14 @@ h1 {
     width: 101%;
     height: 116%;
     left: -1%;
+    z-index: 2;
 }
 
 #image0 {
     position: relative;
     width: 116%;
     height: 115%;
+    z-index: 2;
 }
 
 #image1 {
@@ -839,6 +893,7 @@ h1 {
     width: 116%;
     height: 115%;
     left: -4%;
+    z-index: 2;
 }
 
 #image2{
@@ -846,6 +901,7 @@ h1 {
     width: 116%;
     height: 115%;
     left: -13%;
+    z-index: 2;
 }
 
 #image3{
@@ -853,6 +909,7 @@ h1 {
     width: 116%;
     height: 110%;
     bottom: 2%;
+    z-index: 2;
 }
 
 #image4{
@@ -861,8 +918,8 @@ h1 {
     height: 110%;
     bottom: 2.4%;
     left: -4%;
+    z-index: 2;
 }
-
 
 #image5{
     position: relative;
@@ -870,6 +927,7 @@ h1 {
     height: 110%;
     bottom: 2%;
     left: -13%;
+    z-index: 2;
 }
 
 #image6{
@@ -877,6 +935,7 @@ h1 {
     width: 116%;
     height: 110%;
     bottom: 9%;
+    z-index: 2;
 }
 
 #image7{
@@ -885,6 +944,7 @@ h1 {
     height: 108%;
     bottom: 7%;
     left: -1%;
+    z-index: 2;
 }
 
 #image8{
@@ -893,12 +953,13 @@ h1 {
     height: 110%;
     left: -13%;
     bottom: 9%;
+    z-index: 2;
 }
 
 }
 
 @media only screen and (min-width: 1024px) and (orientation: landscape){
-    #containers{
+#containers{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -906,7 +967,6 @@ h1 {
     height: 80vh;
     border-radius: 20px;
     gap: 2vh; 
-    aspect-ratio: 1 / 1;
 }
 
 #piece-container{
@@ -967,6 +1027,7 @@ h1 {
     position: relative;
     width: 100%;
     height: 120%;
+    z-index: 2;
 }
 
 #img1{
@@ -974,12 +1035,14 @@ h1 {
     width: 117%;
     height: 103%;
     left: -17%;
+    z-index: 2;
 }
 
 #img2{
     position: relative;
     width: 116.5%;
-    height: 100%
+    height: 100%;
+    z-index: 2;
 }
 
 #img3{
@@ -988,12 +1051,14 @@ h1 {
     width: 101%;
     height: 116%;
     left: -1%;
+    z-index: 2;
 }
 
 #image0 {
     position: relative;
     width: 130%;
     height: 130%;
+    z-index: 2;
 }
 
 #image1 {
@@ -1001,6 +1066,7 @@ h1 {
     width: 120%;
     height: 117%;
     left: 9%;
+    z-index: 2;
 }
 
 #image2{
@@ -1008,6 +1074,7 @@ h1 {
     width: 130%;
     height: 110%;
     left: -8%;
+    z-index: 2;
 }
 
 #image3{
@@ -1015,6 +1082,7 @@ h1 {
     width: 120%;
     height: 115%;
     bottom: 10%;
+    z-index: 2;
 }
 
 #image4{
@@ -1023,6 +1091,7 @@ h1 {
     height: 115%;
     bottom: 10%;
     left: 1%;
+    z-index: 2;
 }
 
 
@@ -1032,6 +1101,7 @@ h1 {
     height: 116%;
     bottom: 9%;
     left: -12%;
+    z-index: 2;
 }
 
 #image6{
@@ -1039,6 +1109,7 @@ h1 {
     width: 130%;
     height: 119%;
     bottom: 18%;
+    z-index: 2;
 }
 
 #image7{
@@ -1047,6 +1118,7 @@ h1 {
     height: 115%;
     bottom: 14%;
     left: 1%;
+    z-index: 2;
 }
 
 #image8{
@@ -1055,12 +1127,13 @@ h1 {
     height: 119%;
     left: -14%;
     bottom: 18%;
+    z-index: 2;
 }
 
 }
 
 @media only screen and (min-width: 1200px){
-    #containers{
+#containers{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -1068,7 +1141,7 @@ h1 {
     height: 80vh;
     border-radius: 20px;
     gap: 2vh; 
-    aspect-ratio: 1 / 1;
+
 }
 
 #piece-container{
@@ -1129,6 +1202,7 @@ h1 {
     position: relative;
     width: 100%;
     height: 120%;
+    z-index: 2;
 }
 
 #img1{
@@ -1136,12 +1210,14 @@ h1 {
     width: 117%;
     height: 103%;
     left: -17%;
+    z-index: 2;
 }
 
 #img2{
     position: relative;
     width: 116.5%;
-    height: 100%
+    height: 100%;
+    z-index: 2;
 }
 
 #img3{
@@ -1150,12 +1226,14 @@ h1 {
     width: 101%;
     height: 116%;
     left: -1%;
+    z-index: 2;
 }
 
 #image0 {
     position: relative;
     width: 120%;
     height: 120%;
+    z-index: 2;
 }
 
 #image1 {
@@ -1163,6 +1241,7 @@ h1 {
     width: 110%;
     height: 115%;
     left: 1%;
+    z-index: 2;
 }
 
 #image2{
@@ -1170,6 +1249,7 @@ h1 {
     width: 110%;
     height: 115%;
     left: -8%;
+    z-index: 2;
 }
 
 #image3{
@@ -1177,6 +1257,7 @@ h1 {
     width: 120%;
     height: 110%;
     bottom: 2%;
+    z-index: 2;
 }
 
 #image4{
@@ -1185,6 +1266,7 @@ h1 {
     height: 110%;
     bottom: 2%;
     left: 1%;
+    z-index: 2;
 }
 
 
@@ -1194,6 +1276,7 @@ h1 {
     height: 108%;
     bottom: 1%;
     left: -7%;
+    z-index: 2;
 }
 
 #image6{
@@ -1201,6 +1284,7 @@ h1 {
     width: 120%;
     height: 110%;
     bottom: 9%;
+    z-index: 2;
 }
 
 #image7{
@@ -1209,6 +1293,7 @@ h1 {
     height: 108%;
     bottom: 7%;
     left: 1%;
+    z-index: 2;
 }
 
 #image8{
@@ -1217,12 +1302,13 @@ h1 {
     height: 112%;
     left: -7%;
     bottom: 11%;
+    z-index: 2;
 }
 
 }
 
 @media only screen and (min-width: 1400px){
-    #containers{
+#containers{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -1230,7 +1316,6 @@ h1 {
     height: 80vh;
     border-radius: 20px;
     gap: 2vh; 
-    aspect-ratio: 1 / 1;
 }
 
 #piece-container{
@@ -1290,7 +1375,8 @@ h1 {
 #img0{
     position: relative;
     width: 100%;
-    height: 120%; 
+    height: 120%;
+    z-index: 2;
 }
 
 #img1{
@@ -1298,12 +1384,14 @@ h1 {
     width: 117%;
     height: 103%;
     left: -17%;
+    z-index: 2;
 }
 
 #img2{
     position: relative;
     width: 116.5%;
-    height: 100%
+    height: 100%;
+    z-index: 2;
 }
 
 #img3{
@@ -1312,12 +1400,14 @@ h1 {
     width: 101%;
     height: 116%;
     left: -1%;
+    z-index: 2;
 }
 
 #image0 {
     position: relative;
     width: 130%;
     height: 130%;
+    z-index: 2;
 }
 
 #image1 {
@@ -1325,6 +1415,7 @@ h1 {
     width: 120%;
     height: 117%;
     left: 3%;
+    z-index: 2;
 }
 
 #image2{
@@ -1332,6 +1423,7 @@ h1 {
     width: 130%;
     height: 110%;
     left: -16%;
+    z-index: 2;
 }
 
 #image3{
@@ -1339,6 +1431,7 @@ h1 {
     width: 120%;
     height: 115%;
     bottom: 10%;
+    z-index: 2;
 }
 
 #image4{
@@ -1347,8 +1440,8 @@ h1 {
     height: 115%;
     bottom: 10%;
     left: 1%;
+    z-index: 2;
 }
-
 
 #image5{
     position: relative;
@@ -1356,6 +1449,7 @@ h1 {
     height: 116%;
     bottom: 9%;
     left: -12%;
+    z-index: 2;
 }
 
 #image6{
@@ -1363,6 +1457,7 @@ h1 {
     width: 130%;
     height: 119%;
     bottom: 18%;
+    z-index: 2;
 }
 
 #image7{
@@ -1371,6 +1466,7 @@ h1 {
     height: 115%;
     bottom: 14%;
     left: 1%;
+    z-index: 2;
 }
 
 #image8{
@@ -1379,6 +1475,7 @@ h1 {
     height: 119%;
     left: -12%;
     bottom: 18%;
+    z-index: 2;
 }
 
 }
