--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1 {
 
 .button{
     padding: 10px 20px;
-    color: white;
+    color: #333;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -63,7 +63,7 @@ h1 {
     justify-content: center;
     list-style-type: none;
     padding: 10px 20px;
-    color: white;
+    color: #333;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -77,7 +77,7 @@ h1 {
     display: none;
     list-style-type: none;
     padding: 10px 20px;
-    color: white;
+    color: #333;
     text-align: center;
     text-decoration: none;
     margin: 5% 5% 5% 5%;
